@@ -20,7 +20,7 @@
 	status report - tx_solr_report_SchemaStatus - checking against this
 	name property, that status check must be updated as well.
 -->
-<schema name="tx_solr-1-4-0--20100825" version="1.1">
+<schema name="tx_solr-1-4-0--20100909" version="1.1">
 	<!--
 		attribute "name" is the name of this schema and is only used for
 		display purposes. Applications should change this to reflect the
@@ -397,8 +397,10 @@
 		<field name="changed"  type="date"    indexed="true" stored="true" />
 		<field name="language" type="string"  indexed="true" stored="true" default="0" />
 
-		<!-- access fields -->
-		<field name="group"   type="integer" indexed="true" stored="true" multiValued="true" default="0" />
+		<!--
+			access fields
+		-->
+		<field name="access"  type="string"  indexed="true" stored="true" default="0" />
 		<!-- we only need endtime as records with a starttime > indexing time will not get indexed -->
 		<field name="endtime" type="date" indexed="true" stored="true" />
 
