@@ -8,6 +8,7 @@
 	* Changed how the frontend indexer checks whether indexing is enabled
 	* Changed interfaces tx_solr_AdditionalIndexer and tx_solr_SubstitutePageIndexer to accept documents currently being indexed
 	* Added the Solr Access Filter Plugin
+	* Changed the schema.xml introducing the new access field for use with the Solr Access Filter Plugin
 
 2010-09-10  Markus Goldbach  <markus.goldbach@dkd.de>
 
